--- a/vms/views/vms_product_line_view.xml
+++ b/vms/views/vms_product_line_view.xml
@@ -2,16 +2,11 @@
 <odoo>
     <data>
          <record id="view_vms_cycle_form" model="ir.ui.view">
-            <field name="name">vms.cycle.form</field>
-            <field name="model">vms.cycle</field>
+            <field name="name">vms.product.line.form</field>
+            <field name="model">vms.product.line</field>
             <field name="arch" type="xml">
                 <form string="Product lines">
                     <sheet>
-                        <div class="oe_title">
-                            <h1>
-                                <field name="name" readonly="1"/>
-                            </h1>
-                        </div>
                         <group string='Product line'>
                             <group>
                             	<field name='product_id'/>
