--- a/vms/views/vms_cycle_view.xml
+++ b/vms/views/vms_cycle_view.xml
@@ -12,7 +12,7 @@
                                 <field name="name" readonly="1"/>
                             </h1>
                         </div>
-                        <group>
+                       <!-- <group>
                             <group>
                             	<field name='name'/>
                             	<field name='cycle_id'/>
@@ -21,14 +21,14 @@
                             	<field name='frecuency'/>
                             	<field name='active'/>
                             </group>
-                        </group>
+                        </group> -->
                         <group string='Tasks'>
-                		<field name="task_ids" nolabel="1">
-                          <tree>
-                          	<field name='name'/>
-                          	<field name='active'/>
-                          </tree>
-                        </field>
+	                		<field name="task_ids" nolabel="1">
+	                          <tree>
+	                          	<field name='name'/>
+	                          	<field name='active'/>
+	                          </tree>
+	                        </field>
                         </group>
                     </sheet>
                 </form>
@@ -41,7 +41,7 @@
             <field name="view_mode">form</field>
         </record>
         <menuitem id="cycle_menu" name="Cycles"
-                  parent="menu_vms_settings_cycle"
+                  parent="menu_vms_settings"
                   action="vms_open_view_cycle_list"/>
     </data>
 </odoo>
