--- a/vms/views/vms_activity.xml
+++ b/vms/views/vms_activity.xml
@@ -78,6 +78,10 @@
         				</group>
         			</sheet>
         		</form>
+                <div class="oe_chatter">
+                    <field name="message_follower_ids" widget="mail_followers"/>
+                    <field name="message_ids" placeholder="Share a message..." widget="mail_thread"/>
+                </div>
         	</field>
         </record>
         <!-- Action --> 
