--- a/vms/views/vms_vehicle_cycle.xml
+++ b/vms/views/vms_vehicle_cycle.xml
@@ -20,6 +20,10 @@
         				</group>
         			</sheet>
         		</form>
+                <div class="oe_chatter">
+                    <field name="message_follower_ids" widget="mail_followers"/>
+                    <field name="message_ids" placeholder="Share a message..." widget="mail_thread"/>
+                </div>
         	</field>
         </record>
     </data>
