[ADD][views] add viewa for order,report,task

--- a/vms/views/vms_view.xml
+++ b/vms/views/vms_view.xml
@@ -5,6 +5,6 @@
         <menuitem id="menu_vms_maintenance" name="Maintenance" parent="menu_vms" sequence="10"/>
 
         <menuitem id="menu_vms_report" name="Report" parent="menu_vms" sequence="20"/>
-        <menuitem id="menu_vms_settings" name="Settings" parent="menu_vms" sequence="30"/>s      
+        <menuitem id="menu_vms_settings" name="Settings" parent="menu_vms" sequence="30"/>
     </data>
 </odoo>
