[FIX][vms_cycle] Fixed view bug

--- a/vms/views/vms_cycle_view.xml
+++ b/vms/views/vms_cycle_view.xml
@@ -12,7 +12,7 @@
                                 <field name="name" readonly="1"/>
                             </h1>
                         </div>
-                       <!-- <group>
+                       <group>
                             <group>
                             	<field name='name'/>
                             	<field name='cycle_id'/>
@@ -21,7 +21,7 @@
                             	<field name='frecuency'/>
                             	<field name='active'/>
                             </group>
-                        </group> -->
+                        </group>
                         <group string='Tasks'>
 	                		<field name="task_ids" nolabel="1">
 	                          <tree>
