--- a/vms/views/vms_order_line_view.xml
+++ b/vms/views/vms_order_line_view.xml
@@ -17,7 +17,7 @@
                                 <field name="order_id"/>
                                 <field name="start_date"/>
                                 <field name="end_date"/>
-                                <field name="scheduled_hours"/>
+                                <field name="scheduled_hours" widget='float_time'/>
                                 <field name="real_hours"/>
                             </group>
                             <group>
