--- a/vms/views/fleet_vehicle_view.xml
+++ b/vms/views/fleet_vehicle_view.xml
@@ -12,6 +12,7 @@
                         <group string="Maintenance Program">
                             <field name="program_id"/>
                             <field name="last_order_id"/>
+                            <field name="last_cycle_id"/>
                             <field name="next_cycle_id"/>
                             <field name="next_service_date"/>
                             <field name="next_service_odometer"/>
