--- a/vms/views/vms_activity.xml
+++ b/vms/views/vms_activity.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <odoo>
     <data>
-        <!-- SEARCH View  --> 
         <record model="ir.ui.view" id="view_vms_activity_search">
             <field name="name">vms.activity.search</field>
             <field name="model">vms.activity</field>
@@ -26,7 +25,6 @@
                 </search>
             </field>
         </record>
-        <!-- TREE View  --> 
         <record model='ir.ui.view' id='view_vms_activity_tree'>
             <field name='name'>vms.activity.tree</field>
             <field name='model'>vms.activity</field>
@@ -41,7 +39,6 @@
                 </tree>
             </field>
         </record>
-        <!-- FORM View  -->
         <record model='ir.ui.view' id='view_vms_activity_form'>
             <field name='name'>vms.activity.form</field>
             <field name='model'>vms.activity</field>
@@ -86,7 +83,6 @@
                 </form>
             </field>
         </record>
-        <!-- Action -->
         <record id='action_vms_activity_form' model='ir.actions.act_window'>
             <field name='name'>Mechanic's Tasks</field>
             <field name='res_model'>vms.activity</field>
@@ -94,7 +90,6 @@
             <field name='view_type'>form</field>
             <field name='view_mode'>tree,form</field>
         </record>
-        <!-- Menu Item  -->
-        <menuitem id="vms_activity_menu" name="Mechanic's Tasks" parent="menu_vms_maintenance" action="action_vms_activity_form"/>
+        <menuitem id="vms_activity_menu" name="Mechanic's Tasks" parent="menu_vms_maintenance" action="action_vms_activity_form" sequence="30"/>
     </data>
 </odoo>
