--- a/vms/views/vms_cycle_view.xml
+++ b/vms/views/vms_cycle_view.xml
@@ -2,38 +2,29 @@
 <odoo>
     <data>
          <record id="view_vms_cycle_form" model="ir.ui.view">
-            <field name="name">vms.cycle.form</field>
+            <field name="name">VMS Cycle Form View</field>
             <field name="model">vms.cycle</field>
             <field name="arch" type="xml">
                 <form string="Cycles">
                     <sheet>
-                        <div class="oe_title">
-                            <h1>
-                                <field name="name" readonly="1"/>
-                            </h1>
-                        </div>
-                       <group>
-                            <group>
-                            	<field name='name'/>
-                            </group>
-                            <group>
-                            	<field name='frecuency'/>
-                            	<field name='active'/>
-                            </group>
+                        <group col="4">
+                           	<field name='name'/>
+                            <field name='active'/>
+                           	<field name='frequency'/>
                         </group>
                         <group string='Tasks'>
 	                		<field name="task_ids" nolabel="1">
 	                          <tree>
 	                          	<field name='name'/>
-	                          	<field name='duration'/>
+	                          	<field name='duration' widget="float_time"/>
 	                          </tree>
 	                        </field>
                         </group>
                         <group string='Cycles'>
-                            <field name='cycle_ids' nolabel="1">
+                            <field name='cycle_ids' nolabel="1" domain="[('id','!=',active_id)]">
                                 <tree>
                                     <field name='name'/>
-                                    <field name='frecuency'/>
+                                    <field name='frequency'/>
                                 </tree>
                             </field>
                         </group>
@@ -41,11 +32,21 @@
                 </form>
             </field>
         </record>
+        <record model='ir.ui.view' id='view_vms_cycle_tree'>
+            <field name='name'>VMS Cycle Tree View</field>
+            <field name='model'>vms.cycle</field>
+            <field name='arch' type='xml'>
+                <tree>
+                    <field name="name"/>
+                    <field name="frequency"/>
+                </tree>
+            </field>
+        </record>
         <record id="vms_open_view_cycle_list" model="ir.actions.act_window">
             <field name="name">Cycles</field>
             <field name="res_model">vms.cycle</field>
             <field name="view_type">form</field>
-            <field name="view_mode">form</field>
+            <field name="view_mode">tree,form</field>
         </record>
         <menuitem id="cycle_menu" name="Cycles"
                   parent="menu_vms_settings"
