--- a/vms/views/wms_report_view.xml
+++ b/vms/views/wms_report_view.xml
@@ -8,14 +8,10 @@
             <field name="arch" type="xml">
                 <tree string="Report">
                     <field name="name"/>
-                    <field name="date"/>
                     <field name="unit_id"/>
-                    <field name="order_id"/>
-                    <field name="base_id"/>
+                    <field name="date"/>
                     <field name="employee_id"/>
-                    <field name="end_date"/>
                     <field name="state"/>
-                    <field name="notes"/>
                 </tree>
             </field>
         </record>
@@ -32,17 +28,12 @@
                         <h1 class="oe_title">
                             <field name="name" readonly="1"/>
                         </h1>
-                        <group string='Details'>
-                            <group>
-                                <field name="base_id"/>
-                                <field name="order_id"/>
-                                <field name="unit_id"/>
-                                <field name="employee_id"/>
-                            </group>
-                            <group>
-                                <field name="date"/>
-                                <field name="end_date"/>
-                            </group>
+                        <group string='Details' col="4">
+                            <field name="unit_id"/>
+                            <field name="date"/>
+                            <field name="employee_id"/>
+                            <field name="end_date" attrs="{'invisible':[('end_date','=',False)]}"/>
+                            <field name="order_id" attrs="{'invisible':[('order_id','=',False)]}"/>
                         </group>
                         <group string='Notes'>
                             <field name="notes" nolabel='1'/>
@@ -58,6 +49,6 @@
             <field name="view_type">form</field>
             <field name="view_mode">tree,form</field>
         </record>
-        <menuitem action="action_vms_report" id="vms_report_menu" parent="menu_vms_maintenance"/>
+        <menuitem action="action_vms_report" id="vms_report_menu" parent="menu_vms_maintenance" sequence="40"/>
     </data>
 </odoo>
