[ADD][vms.product.line] Added compute_state function and action_cancel function for product line [REF][vms.product.line] Replaced stock_move_id by stock_picking_id because stock_picking needs to be de parent of all the moves of the spares

--- a/vms/views/vms_product_line_view.xml
+++ b/vms/views/vms_product_line_view.xml
@@ -18,7 +18,7 @@
                             <group>
                                 <field name="task_id"/>
                                 <field name="order_line_id"/>
-                                <field name="stock_move_id"/>
+                                <field name="stock_picking_id"/>
                             </group>
                         </group>
                     </sheet>
