--- a/vms/views/vms_order_view.xml
+++ b/vms/views/vms_order_view.xml
@@ -32,10 +32,10 @@
             <field name="arch" type="xml">
                 <form string="Order of Maintenance">
                     <header>
-                        <button icon="gtk-go-forward" name="action_open" states="draft" string="Open" type="object"/>
-                        <button icon="gtk-apply" name="action_released" states="open" string="Released" type="object"/>
-                        <button icon="gtk-apply" name="action_done" states="released" string="Done" type="object"/>
-                        <button icon="gtk-cancel" name="action_cancel" states="draft" string="Cancel" type="object"/>
+                        <button icon="fa-arrow-right" class="oe_highlight" name="action_open" states="draft" string="Open" type="object"/>
+                        <button icon="fa-check-square-o" class="oe_highlight" name="action_released" states="open" string="Released" type="object"/>
+                        <button icon="fa-thumbs-up" class="oe_highlight" name="action_done" states="released" string="Done" type="object"/>
+                        <button icon="fa-times" name="action_cancel" states="draft" string="Cancel" type="object"/>
                         <field name="state" statusbar_visible="draft,open,released" widget="statusbar"/>
                     </header>
                     <sheet>
@@ -61,7 +61,7 @@
                                     <field context="{'default_order_id': active_id}" name="order_line_ids" nolabel="1"/>
                                 </group>
                             </page>
-                            <page string="MRO Program Details">
+                            <page string="MRO Program Details" attrs="{'invisible':[('type','in',(False,'corrective'))]}">
                                 <group>
                                     <field name="current_odometer"/>
                                     <newline/>
@@ -72,7 +72,7 @@
                                     <field name="sequence"/>
                                 </group>
                             </page>
-                            <page string="Driver Reports Solved">
+                            <page string="Driver Reports Solved" attrs="{'invisible':[('type','in',(False,'preventive'))]}">
                                 <field name="report_ids" nolabel="1"/>
                             </page>
                         </notebook>
