--- a/vms/views/vms_order_line_view.xml
+++ b/vms/views/vms_order_line_view.xml
@@ -8,6 +8,10 @@
             <field name="arch" type="xml">
                 <form string="Order lines">
                     <header>
+                        <button name="action_cancel_draft" states="cancel" string="Set to Draft" type="object"/>
+                        <button name="action_process" class="oe_highlight" states="draft" string="Start" type="object"/>
+                        <button name="action_cancel" states="draft,process" string="Cancel" type="object" confirm="Are you sure to cancel this task?"/>
+                        <button name="action_done" class="oe_highlight" states="process" string="End" type="object"/>
                         <field name="state" statusbar_visible="pending,process,done,cancel" widget="statusbar"/>
                     </header>
                     <sheet>
