--- a/vms/views/vms_order_view.xml
+++ b/vms/views/vms_order_view.xml
@@ -32,10 +32,11 @@
             <field name="arch" type="xml">
                 <form string="Order of Maintenance">
                     <header>
+                        <button name="action_cancel_draft" states="cancel" string="Set to Draft" type="object"/>
                         <button icon="fa-arrow-right" class="oe_highlight" name="action_open" states="draft" string="Open" type="object"/>
                         <button icon="fa-check-square-o" class="oe_highlight" name="action_released" states="open" string="Released" type="object"/>
                         <button icon="fa-thumbs-up" class="oe_highlight" name="action_done" states="released" string="Done" type="object"/>
-                        <button icon="fa-times" name="action_cancel" states="draft" string="Cancel" type="object"/>
+                        <button icon="fa-times" name="action_cancel" states="draft,open" string="Cancel" type="object" confirm="Are you sure to cancel this order? All the task(s) will cancel too."/>
                         <field name="state" statusbar_visible="draft,open,released" widget="statusbar"/>
                     </header>
                     <sheet>
