--- a/vms/views/vms_order_line_view.xml
+++ b/vms/views/vms_order_line_view.xml
@@ -22,24 +22,32 @@
                             </group>
                             <group>
                                 <field name="external"/>
-                                <field name="supplier_id" attrs="{'invisible':[('external','=',False)], 'required':[('external','=',True)]}"/>
-                                <field name="purchase_order_id" attrs="{'invisible':[('external','=',False)]}"/>
                             </group>
                         </group>
                         <group>
-                            <group string="Schedule">
+                            <group string="External Service" attrs="{'invisible':[('external','=',False)]}">
+                                <field name="supplier_id" attrs="{'required':[('external','=',True)]}"/>
+                                <field name="purchase_order_id"/>
+                                <field name="purchase_state"/>
+                                <field name="product_id" attrs="{'required':[('external','=',True)]}"/>
+                                <field name="qty_product"/>
+                                <button name ="create_po" string="Create Invoice" states="draft" type="object"/>
+                            </group>
+                        </group>
+                        <group>
+                            <group string="Schedule" attrs="{'invisible':[('external','=',True)]}">
                                 <field name="start_date"/>
                                 <field name="end_date"/>
                                 <field name="duration" widget='float_time'/>
                             </group>
-                            <group string="Real">
+                            <group string="Real" attrs="{'invisible':[('external','=',True)]}">
                                 <field name="start_date_real"/>
                                 <field name="end_date_real"/>
                                 <field name="real_duration" widget='float_time'/>
                             </group>
                         </group>
                         <group string="Mechanics" attrs="{'invisible':[('external','=',True)]}">
-                            <field name="responsible_ids" attrs="{'readonly':[('order_id', '=', False)]}"  nolabel="1">
+                            <field name="responsible_ids" nolabel="1">
                                 <tree>
                                     <field name="name"/>
                                     <field name="job_id"/>
@@ -47,7 +55,7 @@
                                 </tree>
                             </field>
                         </group>
-                        <group string="Spare Parts">
+                        <group string="Spare Parts" attrs="{'invisible':[('external','=',True)]}">
                             <field name="spare_part_ids" nolabel="1">
                                 <tree editable="bottom">
                                     <field name="product_id"/>
