--- a/vms/views/vms_order_view.xml
+++ b/vms/views/vms_order_view.xml
@@ -75,7 +75,15 @@
                                 </group>
                             </page>
                             <page string="Driver Reports Solved" attrs="{'invisible':[('type','in',(False,'preventive'))]}">
-                                <field name="report_ids" nolabel="1"/>
+                                <field name="report_ids" nolabel="1">
+                                    <tree string='description'>
+                                        <field name="name"/>
+                                        <field name="unit_id"/>
+                                        <field name="date"/>
+                                        <field name="employee_id"/>
+                                        <field name="state"/>
+                                    </tree>
+                                </field>
                             </page>
                         </notebook>
                     </sheet>
