--- a/vms/views/wms_report_view.xml
+++ b/vms/views/wms_report_view.xml
@@ -22,13 +22,15 @@
             <field name="arch" type="xml">
                 <form>
                     <header>
-                        <field name="state" statusbar_visible="draft,confirmed,close,cancel" widget="statusbar"/>
+                        <button name="action_confirmed" class="oe_highlight" states="open" string="Confirm" type="object"/>
+                        <field name="state" statusbar_visible="draft,open,confirmed,close,cancel" widget="statusbar"/>
                     </header>
                     <sheet>
                         <h1 class="oe_title">
                             <field name="name" readonly="1"/>
                         </h1>
                         <group string='Details' col="4">
+                            <field name='base_id'/>
                             <field name="unit_id"/>
                             <field name="date"/>
                             <field name="employee_id"/>
@@ -39,6 +41,10 @@
                             <field name="notes" nolabel='1'/>
                         </group>
                     </sheet>
+                     <div class="oe_chatter">
+                        <field name="message_follower_ids" widget="mail_followers"/>
+                        <field name="message_ids" placeholder="Share a message..." widget="mail_thread"/>
+                    </div>
                 </form>
             </field>
         </record>
