--- a/vms/views/vms_base_view.xml
+++ b/vms/views/vms_base_view.xml
@@ -7,8 +7,8 @@
             <field name="inherit_id" ref="tms.tms_base_form"/>
             <field name="arch" type="xml">
                 <field name="fuel_log_sequence_id" position="after">
-                    <field name='order_sequence_id'/>
-                    <field name='report_sequence_id'/>
+                    <field name='order_sequence_id' required="1"/>
+                    <field name='report_sequence_id' required="1"/>
                 </field>
             </field>
         </record>
